/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
//
syntax = "proto3";

package magma.migration.orc8r;
option go_package = "types";

message LegacyReleaseChannel {
    repeated string supported_versions = 1;
}

message ImageSpec {
    string name = 1;
    int64 order = 2;
}

message TierInfo {
    string name = 1;
    string version = 2;
    repeated ImageSpec images = 3;
}
